--- a/.github/workflows/updatedata.yml
+++ b/.github/workflows/updatedata.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      name: Setup and run node
-      - uses: actions/setup-node@v3
+      - name: Setup and run node
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'npm'
