--- a/.github/workflows/sendData.yml
+++ b/.github/workflows/sendData.yml
@@ -7,6 +7,7 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch:
 
+
 jobs:
   gallary_job:
     runs-on: ubuntu-latest
@@ -26,4 +27,8 @@ jobs:
         run: pip install -r github-reqs.txt
 
       - name: Run Sender
+        env:
+          PHONENUM: ${{ secrets.PHONENUM }}
+          APIKEY: ${{ secrets.APIKEY }}
         run: python send_data.py
+
