--- a/.github/workflows/updatedata.yml
+++ b/.github/workflows/updatedata.yml
@@ -1,13 +1,12 @@
-name: Generate the foodle word data for the day
-
+name: Generate the foodle word data for the day and send the data to me
 on:
   schedule:
-    # Runs “At 00:00.” every day (see https://crontab.guru)
-    - cron: '0 0 * * *'
+    # Runs “At 04:00.” UTC every day (see https://crontab.guru)
+    - cron: '0 4 * * *'
   workflow_dispatch:
 
 jobs:
-  words:
+  generate_words:
     runs-on: ubuntu-latest
     name: updates word data for today
 
@@ -33,3 +32,27 @@ jobs:
           # "echo" returns true so the build succeeds, even if no changed files
           git commit -m 'Update words file' || echo
           git push
+  send:
+    needs: generate_words
+    runs-on: ubuntu-latest
+    name: Sends me the foodle info
+
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8' # install the python version needed
+
+      - name: Install requirments
+        run: pip install -r github-reqs.txt
+
+      - name: Run Sender
+        env:
+          PHONENUM: ${{ secrets.PHONENUM }}
+          APIKEY: ${{ secrets.APIKEY }}
+        run: python send_data.py
+  
